--- a/config/LocalElement.ini
+++ b/config/LocalElement.ini
@@ -1,11 +1,4 @@
 [RegisterElement]
-user_email=id>register_email
-user_email_error=id>register_email-error
-user_name=id>register_nickname
-user_name_error=id>register_nickname-error
-password=id>register_password
-password_error=id>register_password-error
-code_image=id>getcode_num
-code_text=id>captcha_code
-code_text_error=id>captcha_code-error
-register_button=id>register-btn
+rd_more=xpath>//*[@id="__layout"]/div/div[2]/div[1]/section/div[3]/div/div[1]/span
+rd_one_new=xpath>//*[@id="__layout"]/div/div[2]/div[1]/div[2]/section[2]/ul/li[1]/div/p[2]
+rd_one_new_title=xpath>//*[@id="__layout"]/div/div[2]/div[1]/div[2]/section[1]/div/p[1]
